Add support for two types of troubleshoot: - docker with byebug: docker-compose.yml (not in github) and attach docker as daemon - docker with Rubymine: Gemfile and docker-compose-override.yml (not in github)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,8 @@ services:
     links:
       - db
       - db_test
+    stdin_open: true
+    tty: true
 
   ##
   # Could be used to bootstrap some data or the application state before running
