--- a/config/local_env.example.yml
+++ b/config/local_env.example.yml
@@ -26,3 +26,10 @@ ED2_CAS_VALIDATE_URL: 'https://FQDN/cas/samlValidate'
 
 # Capistrano deployment log path
 ED2_DEPLOYED_REVISION_LOG: /path/to/app/revisions.log
+
+# The Repository that ED2 will publish works to
+REPOSITORY_URL: 'http://hyrax.server'
+REPOSITORY_ADMIN_SET_URL: '/admin/admin_sets.json'
+REPOSITORY_WORKFLOW_URL: '/concern/workflow_actions/{work_id}'
+REPOSITORY_UPLOAD_URL: '/uploads'
+REPOSITORY_AUTHENTICATION_USERNAME: 'ed2user@hyrax.server'
