--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,7 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV["ED2_SECRET_KEY_BASE"] %>
+
+staging:
+  secret_key_base: <%= ENV["ED2_SECRET_KEY_BASE"] %>
