adds actionmailer and related views and code for email related jobs

--- a/config/local_env.example.yml
+++ b/config/local_env.example.yml
@@ -40,3 +40,7 @@ ED2_REDIS_PORT: '6379'
 ED2_REDIS_HOST: localhost
 # Docker
 #ED2_REDIS_HOST: redis
+
+# Email configurations
+ED2_EMAIL_FROM: 'user@server.com'
+ED2_APPLICATION_HOST_NAME: 'localhost:3000'
