moves institution WOS search to local configuration

--- a/config/local_env.example.yml
+++ b/config/local_env.example.yml
@@ -44,3 +44,8 @@ ED2_REDIS_HOST: localhost
 # Email configurations
 ED2_EMAIL_FROM: 'user@server.com'
 ED2_APPLICATION_HOST_NAME: 'localhost:3000'
+
+# Web Of Science Search Terms
+ED2_WOS_SEARCH_TERMS:
+  - Oregon State University
+  - Oregon State Univ
