--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ jobs:
           name: Create DB
           command: bundle exec rake db:create db:schema:load --trace
       - run:
+          name: Copy local_env.yml
+          command: cp config/local_env.example.yml config/local_env.yml
+      - run:
           name: Run Tests
           command: |
             bundle exec rspec --profile 10 \
