--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,16 @@ jobs:
     docker:
       - image: circleci/ruby:2.5
         environment:
+          USE_CCI: true
           RAILS_ENV: test
-          ED2_DB_PASSWORD: ''
+          ED2_DB_PASSWORD: '12341234'
           ED2_DB_PORT: '3306'
           ED2_DB_USERNAME: root
           ED2_DB_HOST: 127.0.0.1
       - image: circleci/mysql:5.7.22
         environment:
           MYSQL_DATABASE: ed2_test
+          MYSQL_ROOT_PASSWORD: '12341234'
     working_directory: ~/app
     steps:
       - run:
@@ -38,6 +40,9 @@ jobs:
       - run:
           name: Create DB
           command: bundle exec rake db:create db:schema:load --trace
+      - run:
+          name: Copy local_env.yml
+          command: cp config/local_env.example.yml config/local_env.yml
       - run:
           name: Run Tests
           command: |
