--- a/config/local_env.example.yml
+++ b/config/local_env.example.yml
@@ -49,3 +49,10 @@ ED2_APPLICATION_HOST_NAME: 'localhost:3000'
 ED2_WOS_SEARCH_TERMS:
   - Oregon State University
   - Oregon State Univ
+
+# OSU API
+OSU_API_URL: 'https://api.server'
+OSU_API_OAUTH2_TOKEN: '/oauth2/token'
+OSU_API_DIRECTORY_SEARCH: '/v1/directory'
+OSU_API_CONSUMER_KEY: 'xxx123abc'
+OSU_API_CONSUMER_SECRET: 'abc123xxx'
