--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             echo "deb http://http.debian.net/debian stretch main" | sudo tee -a /etc/apt/sources.list
             sudo apt-get update -qq
             sudo apt-get upgrade -qq
-            sudo apt-get install -y software-properties-common build-essential make apt-utils default-libmysqlclient-dev nodejs
+            sudo apt-get install -y software-properties-common build-essential make apt-utils default-libmysqlclient-dev mariadb-client nodejs
       - restore_cache:
           name: Restore bundle from cache
           keys:
@@ -87,7 +87,7 @@ jobs:
           command: |
             sudo apt-get update -qq
             sudo apt-get upgrade -qq
-            sudo apt-get install -y -f software-properties-common build-essential default-libmysqlclient-dev nodejs make apt-utils
+            sudo apt-get install -y -f software-properties-common build-essential default-libmysqlclient-dev mariadb-client nodejs make apt-utils
 
       - restore_cache:
           key: gemfile-{{ checksum "Gemfile.lock" }}
