--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,9 @@ jobs:
           command: gem install bundler -v 2.1.4
       - run:
           name: Install dependencies
-          command: bundle install --path=vendor/bundle --jobs=4 --retry=3
+          command: |
+            bundle update --path=vendor/bundle --jobs=4 retry=3
+            bundle install --path=vendor/bundle --jobs=4 --retry=3
       # Disable rubocop, it wasn't setup to run in the old workflow
       #- run:
       #    name: Run Rubocop
