--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            bundle update --path=vendor/bundle --jobs=4 retry=3
+            bundle update
             bundle install --path=vendor/bundle --jobs=4 --retry=3
       # Disable rubocop, it wasn't setup to run in the old workflow
       #- run:
@@ -103,7 +103,7 @@ jobs:
       - run:
           name: Force bundle update (srsly again)
           command: |
-            bundle update --path=vendor/bundle --jobs=4 --retry=3
+            bundle update
             bundle install --path=vendor/bundle --jobs=4 --retry=3
       - run:
           name: Copy local_env.yml
