--- a/config/local_env.example.yml
+++ b/config/local_env.example.yml
@@ -36,7 +36,7 @@ REPOSITORY_UPLOAD_URL: '/uploads'
 REPOSITORY_AUTHENTICATION_TOKEN: '12345'
 REPOSITORY_AUTHENTICATION_USERNAME: 'ed2user@hyrax.server'
 REPOSITORY_PUBLISH_WORK_TYPE: Article
-REPOSITORY_PUBLISH_ADMIN_SET_NAME: Self Deposit
+REPOSITORY_PUBLISH_ADMIN_SET_NAME: Article
 REPOSITORY_PUBLISH_REQUIRES_WORKFLOW_APPROVAL: 'false'
 REPOSITORY_PUBLISH_RIGHTS_STATEMENT: 'http://rightsstatements.org/vocab/InC/1.0/'
 REPOSITORY_PUBLISH_LICENSE: 'http://creativecommons.org/licenses/by/4.0/'
