revise docker compose for kubernetes +1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
         condition: service_started
       db_test:
         condition: service_started
+      db_migrate:
+        condition: service_started
       redis:
         condition: service_started
     volumes:
@@ -90,6 +92,8 @@ services:
       db:
         condition: service_started
       db_test:
+        condition: service_started
+      db_migrate:
         condition: service_started
       redis:
         condition: service_started
